Security Fix: mitigate path traversal, open redirect, SQL injection, and JS code injection in WebGoat