@@ -8,6 +8,7 @@ import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.servlet.ModelAndView;
+import org.springframework.web.util.UriComponentsBuilder;
 
 /**
  * Provides a real 302 redirect for experimentation separate from assignment scoring.
@@ -17,16 +18,14 @@ public class OpenRedirectRealRedirect {
 
   @GetMapping("/OpenRedirect/realRedirect")
   public ModelAndView real(@RequestParam("url") String url) {
-    // Validate redirect target against a whitelist or enforce relative paths
-    // Reject absolute URLs unless explicitly validated against a whitelist
-    // For this lesson, we enforce that the URL must be a relative path within the application.
-    if (url == null || url.trim().isEmpty() || !url.startsWith("/") || url.contains("://")) {
-      // Redirect to a safe default page if the URL is not valid or relative
-      // This prevents redirection to arbitrary external sites.
-      return new ModelAndView("redirect:/welcome.mvc"); // Example safe default
+    // Remediation: Validate redirect targets against a whitelist or ensure it's an internal path.
+    // Reject absolute URLs or paths containing traversal sequences.
+    if (url == null || url.isBlank() || !url.startsWith("/") || url.contains("..")) {
+      // Redirect to a safe default page or return an error view
+      return new ModelAndView("redirect:/");
     }
-    // Further validation could involve checking against a list of allowed internal paths
-    // or using a URL parser to ensure it's not an external domain.
-    return new ModelAndView("redirect:" + url);
+    // Use UriComponentsBuilder to ensure proper encoding and prevent potential issues
+    // with path manipulation, even if the initial check passes.
+    return new ModelAndView("redirect:" + UriComponentsBuilder.fromPath(url).build().toUriString());
   }
 }
